# riscv-emulator

./: .gitignore  CMakeLists.txt  dev-configure.sh  dev-run.sh
examples/: CMakeLists.txt  build.ninja  build.ninja.in  strlen.c
scripts/: decoder_generator.py
src/: decoder.h  elf_loader.c  elf_loader.h  environment.c  environment.h  exec.c  exec.h  gdbserver.c  gdbserver.h  logger.c  logger.h  main.c  memory_builder.c  memory_builder.h  opcode.h
src/devices/uart/: ns16550.c  ns16550.h
